# csv_data_generator

./: DEVELOPMENT.md  PUBLISHING.md  README.md  pyproject.toml  requirements.txt
csv_data_generator/: cli.py  csv_generator.py
tests/: test_csv_generator.py
