[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "csv-data-generator"
version = "0.0.2"
description = "A CSV data generator"
authors = [
  { name = "Bruno Fagundez", email = "bfagundez@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
  "click",
]

[project.optional-dependencies]
dev = [
    "yapf",
    "pylint",
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.pylint]
max-line-length = 88
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "W0105", # (pointless-string-statement)
]

[tool.pytest.ini_options]
addopts = "--cov=csv_data_generator --cov-report html --cov-report term-missing --cov-fail-under 95"
[tool.coverage.run]
source = ["csv_data_generator"]

[tool.yapf]
blank_line_before_nested_class_or_def = true
column_limit = 88

[project.entry-points.console_scripts] 
csv-data-gen = "csv_data_generator.cli:start"

[project.urls]
"Homepage" = "https://github.com/bfagundez/csv_data_generator"
"Bug Tracker" = "https://github.com/bfagundez/csv_data_generator/issues"

